--- a/ass4_2.html
+++ b/ass4_2.html
@@ -40,7 +40,7 @@
       <div class="col-12 col-md-6 col-lg-4 mb-3">
         <div class="p-4 bg-primary text-white text-center rounded">
           <h2>Column 1</h2>
-          <p>Fuckass columns.</p>
+          <p>Nothing There.</p>
         </div>
       </div>
 
