--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>I wish I were somewhere else but not here actually</h1>
-    <p>Common text smth something responsive yeah yap yap</p>
+    <p>I'm being tortured in real time by Design Analysis</p>
   </header>
 
   <main class="boxes">
