--- a/ass4_3.html
+++ b/ass4_3.html
@@ -16,7 +16,7 @@
     <div class="container">
         <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
           <img src="Icon.png" alt="Site Icon" width="40" height="40" class="me-2">
-          MyLogo
+          SomethingIDid
         </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -64,7 +64,7 @@
               <img src="frend.png" class="card-img-top" alt="Project 3" width="400" height="250">
               <div class="card-body">
                 <h5 class="card-title">Project Three</h5>
-                <p class="card-text">And maybe Im being good at front end.</p>
+                <p class="card-text">And maybe Im being semi-good at front end.</p>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
       <div class="col-12 col-md-4 mt-5 mt-md-0">
         <div class="p-4 bg-light rounded shadow-sm">
           <h3 class="mb-3">About Me</h3>
-          <p>Hi! I'm not a web developer not passionate about creating clean, responsive websites. I'm not a sociologist. I'm not a programmer. I hate IT I HATE IT I CAN'T TAKE IT ANYMORE PLEASE SOMEONE SAVE ME</p>
+          <p>Hi! I'm still in my journey in finding what I enjoy doing in IT.</p>
           <h4 class="mt-4">Contact</h4>
           <p>Email: abraevdanial@gmail.com</p>
           <p>Phone: +7 747 687 2496</p>
