--- a/ass4_2.html
+++ b/ass4_2.html
@@ -13,7 +13,7 @@
     <div class="container">
      <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
   <img src="Icon.png" alt="Site Icon" width="40" height="40" class="me-2">
-  MyLogo
+  SellingBoxesMovingBoxes
 </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
